2003-03-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdAH.c (Tcl_FileObjCmd): Fix the setting of a file's
	mtime and atime on 64-bit platforms.  [Bug #698146]

2003-03-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/io.test: Doh! Undo accidental commenting
	out of a couple of tests.

2003-03-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/io.test: Define a fileevent constraint and add
	it to the constraint list of any test that depends
	on the fileevent command. This is only useful to
	Jacl which does not support fileevent.

2003-03-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/io.test: Define an openpipe constraint and add
	it to the constraint list of any test that creates
	a pipe using the open command. This is only useful to
	Jacl which does not support pipes.

2003-03-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/TclUtf.c (Tcl_UniCharNcasecmp):       Corrected failure to
	* tests/utf.test (utf-25.*):    properly compare Unicode strings of
	different case in a case insensitive manner.  [Bug 699042]

2003-03-06  Kevin Kenny  <kennykb@users.sourceforge.net>

	* generic/tclCompCmds.c (TclCompileSwitchCmd):
	Replaced a non-portable 'bzero' with a portable 'memset'.
	[Bug 698442].
	
2003-03-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tclIO.c (Tcl_Seek, Tcl_OutputBuffered):
	If there is data buffered in the statePtr->curOutPtr
	member then set the BUFFER_READY flag in Tcl_Seek.
	This is needed so that the next call to FlushChannel
	will write any buffered bytes before doing the seek.
	The existing code would set the BUFFER_READY flag
	inside the Tcl_OutputBuffered function. This was a
	programming error made when Tcl_OutputBuffered
	was originally created in CVS revision 1.35. The
	setting of the BUFFER_READY flag should not have
	been included in the Tcl_OutputBuffered function.
	* generic/tclTest.c (TestChannelCmd): Use the
	Tcl_InputBuffered and Tcl_OutputBuffered